tg_parser/tests/invalid/int_instance_arg.tg
circuit C(in a; out y) {
    NAND2 g1(0, a) -> y;
}
